# crazy-practical

./: .gitignore  FIXES_SUMMARY.md  HARDWARE_SETUP.md  LICENSE  MANIFEST.in  OBSTACLE_AVOIDANCE_FIXES.md  README.md  UNITS_FIX.md  pyproject.toml  requirements.txt  setup.py
cfpilot/: __init__.py  cli.py  controller.py  detection.py  mapping.py  missions.py  visualization.py
cfpilot/config/: flight_config.yaml
cfpilot/planning/CubicSpline/: cubic_spline_planner.py
cfpilot/planning/DStarLite/: d_star_lite.py
config/: flight_config.yaml
crazyflie_autonomous/: __init__.py
dev/Cassie/: Avoid_Land.py  obstacle_avoidance.py
dev/May/: core.py
src/: basic_flight.py  crazyflie_controller.py  flight_data_plotter.py  hardware_test.py  height_analyzer.py  landing_pad_detector.py  realtime_plotter.py  sensor_flight.py  simple_landing_detector.py  simple_mission.py  test_controller.py  test_landing_detection.py
tests/: DstarLite.ipynb  Gridmap.ipynb  __init__.py  test_basic_flight.py  test_detection.py  test_missions.py  visualize.ipynb
